correction du wrap de la card plat

--- a/css/base/_base.scss
+++ b/css/base/_base.scss
@@ -4,7 +4,7 @@
 
   body {
     margin: 0;
-    min-width: 260px;
+    min-width: 320px;
   }
 
   a {
